--- a/package.json
+++ b/package.json
@@ -27,5 +27,9 @@
     "gh-pages": "^6.3.0",
     "globals": "^16.3.0",
     "vite": "^7.1.2"
+  },
+  "dependencies": {
+    "@netlify/neon": "^1.0.0",
+    "@netlify/functions": "^2.0.0"
   }
 }
