--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL="postgresql://user:password@host:port/database?schema=public"
+DATABASE_URL="postgresql://nesti_user:pVVikSrAZl6mmHq3DBSFLor3hqzMseND@dpg-d36qmr1r0fns7384jsg0-a.frankfurt-postgres.render.com/nesti"
