--- a/package.json
+++ b/package.json
@@ -7,26 +7,22 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint .",
-    "deploy": "gh-pages -d dist"
+    "start": "node server/server.js",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
-    "lucide-react": "^0.544.0",
+    "@prisma/client": "^5.0.0",
+    "express": "^4.18.2",
+    "pg": "^8.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@prisma/client": "^5.0.0"
+    "dotenv": "^16.0.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.33.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "eslint": "^9.33.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.20",
-    "gh-pages": "^6.3.0",
-    "globals": "^16.3.0",
-    "vite": "^7.1.2",
-    "prisma": "^5.0.0"
+    "@vitejs/plugin-react": "^4.0.0",
+    "prisma": "^5.0.0",
+    "vite": "^4.0.0"
   }
 }
