--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  {
   "name": "nesti-app",
   "private": true,
   "version": "0.0.0",
@@ -17,7 +16,8 @@
     "pg": "^8.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "dotenv": "^16.0.0"
+    "dotenv": "^16.0.0",
+    "cors": "^2.8.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.0",
