--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 DATABASE_URL="postgresql://nesti_user:pVVikSrAZl6mmHq3DBSFLor3hqzMseND@dpg-d36qmr1r0fns7384jsg0-a.frankfurt-postgres.render.com/nesti"
+NODE_ENV="development"
+PORT=5432
