--- a/package.json
+++ b/package.json
@@ -11,19 +11,19 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@prisma/client": "^5.0.0",
+    "@prisma/client": "^5.22.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
     "express": "^4.18.2",
     "pg": "^8.11.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "dotenv": "^16.0.0",
-    "cors": "^2.8.5"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^4.0.0",
-    "prisma": "^5.0.0",
-    "vite": "^4.0.0"
+    "prisma": "^5.22.0",
+    "vite": "^4.5.14"
   }
 }
