--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "build": "vite build",
     "preview": "vite preview",
     "start": "node server/server.js",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "seed": "node prisma/seed.js",
+    "db:reset": "npx prisma migrate reset && npm run seed",
+    "db:studio": "npx prisma studio"
   },
   "dependencies": {
     "@prisma/client": "^5.22.0",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.2",
@@ -20,18 +24,14 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^4.0.0",
     "prisma": "^5.22.0",
     "vite": "^4.5.14"
-  }
+  },
   "prisma": {
     "seed": "node prisma/seed.js"
-  },
-  "scripts": {
-    "seed": "node prisma/seed.js",
-    "db:reset": "npx prisma migrate reset && npm run seed",
-    "db:studio": "npx prisma studio"
   }
 }
