--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 DATABASE_URL="postgresql://nesti_user:pVVikSrAZl6mmHq3DBSFLor3hqzMseND@dpg-d36qmr1r0fns7384jsg0-a.frankfurt-postgres.render.com/nesti"
 JWT_SECRET="votre_secret_jwt_tres_securise_changez_cela_en_production"
 PORT=10000
+EXPO_PUBLIC_API_URL=https://votre-api.com
+EXPO_PUBLIC_APP_NAME=Nesti
