--- a/package.json
+++ b/package.json
@@ -1,37 +1,35 @@
 {
   "name": "nesti-app",
-  "private": true,
   "version": "1.0.0",
-  "type": "module",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "start": "node server/server.js",
-    "postinstall": "prisma generate",
-    "db:migrate": "npx prisma migrate deploy",
-    "db:studio": "npx prisma studio",
-    "db:reset": "npx prisma migrate reset"
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
+    "build": "expo build",
+    "build:android": "eas build -p android",
+    "build:ios": "eas build -p ios",
+    "build:all": "eas build --platform all",
+    "submit:android": "eas submit -p android",
+    "submit:ios": "eas submit -p ios",
+    "eas:login": "eas login",
+    "eas:configure": "eas build:configure"
   },
   "dependencies": {
+    "expo": "~49.0.0",
+    "expo-status-bar": "~1.6.0",
+    "react": "18.2.0",
+    "react-native": "0.72.0",
     "@prisma/client": "^5.22.0",
     "bcrypt": "^5.1.1",
-    "cors": "^2.8.5",
-    "dotenv": "^16.0.0",
-    "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.2",
-    "pg": "^8.11.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
-    "@types/jsonwebtoken": "^9.0.5",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
-    "@vitejs/plugin-react": "^4.0.0",
+    "@babel/core": "^7.20.0",
+    "@types/react": "~18.2.0",
     "prisma": "^5.22.0",
-    "vite": "^4.5.14"
+    "typescript": "^5.1.0"
   },
   "prisma": {
     "seed": "node prisma/seed.js"
