--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "expo": "~49.0.0",
     "expo-status-bar": "~1.6.0",
+    "expo-router": "^3.4.0",
     "react": "18.2.0",
     "react-native": "0.72.0",
     "@prisma/client": "^5.22.0",
@@ -33,5 +34,6 @@
   },
   "prisma": {
     "seed": "node prisma/seed.js"
-  }
+  },
+  "private": true
 }
