--- a/app.json
+++ b/app.json
@@ -37,7 +37,7 @@
         "origin": false
       },
       "eas": {
-        "projectId": "votre-project-id"
+        "projectId": "cf5eaf29-4cb9-4ff1-9690-80a8de152480"
       }
     }
   }
