--- a/package.json
+++ b/package.json
@@ -7,10 +7,9 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "build": "expo build",
+    "build": "eas build --platform all",
     "build:android": "eas build -p android",
     "build:ios": "eas build -p ios",
-    "build:all": "eas build --platform all",
     "submit:android": "eas submit -p android",
     "submit:ios": "eas submit -p ios",
     "eas:login": "eas login",
@@ -19,7 +18,7 @@
   "dependencies": {
     "expo": "~49.0.0",
     "expo-status-bar": "~1.6.0",
-    "expo-router": "^3.4.0",
+    "expo-router": "^1.7.9",
     "react": "18.2.0",
     "react-native": "0.72.0",
     "@prisma/client": "^5.22.0",
@@ -29,6 +28,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.0",
+    "@types/react-native": "~0.72.0",
     "prisma": "^5.22.0",
     "typescript": "^5.1.0"
   },
