--- a/package.json
+++ b/package.json
@@ -7,33 +7,32 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "build": "eas build --platform all",
+    "build": "expo build",
     "build:android": "eas build -p android",
     "build:ios": "eas build -p ios",
+    "build:all": "eas build --platform all",
     "submit:android": "eas submit -p android",
     "submit:ios": "eas submit -p ios",
     "eas:login": "eas login",
     "eas:configure": "eas build:configure"
   },
   "dependencies": {
-    "expo": "~49.0.0",
-    "expo-status-bar": "~1.6.0",
-    "expo-router": "^1.7.9",
+    "expo": "49.0.0",
     "react": "18.2.0",
     "react-native": "0.72.0",
-    "@prisma/client": "^5.22.0",
-    "bcrypt": "^5.1.1",
-    "jsonwebtoken": "^9.0.2"
+    "expo-status-bar": "1.6.0",
+    "expo-router": "1.7.6",
+    "@prisma/client": "5.22.0",
+    "bcrypt": "5.1.1",
+    "jsonwebtoken": "9.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.0",
-    "@types/react-native": "~0.72.0",
-    "prisma": "^5.22.0",
-    "typescript": "^5.1.0"
+    "@babel/core": "7.20.0",
+    "@types/react": "18.2.0",
+    "prisma": "5.22.0",
+    "typescript": "5.1.0"
   },
   "prisma": {
     "seed": "node prisma/seed.js"
-  },
-  "private": true
+  }
 }
