--- a/package.json
+++ b/package.json
@@ -1,23 +1,38 @@
 {
   "name": "nesti-app",
   "version": "1.0.0",
-  "private": true,
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eas-build": "eas build"
+    "build": "expo build",
+    "build:android": "eas build -p android",
+    "build:ios": "eas build -p ios",
+    "build:all": "eas build --platform all",
+    "submit:android": "eas submit -p android",
+    "submit:ios": "eas submit -p ios",
+    "eas:login": "eas login",
+    "eas:configure": "eas build:configure"
   },
   "dependencies": {
     "expo": "49.0.0",
-    "expo-router": "1.9.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.72.3",
-    "react-native-web": "0.19.20"
+    "react-native": "0.72.0",
+    "expo-status-bar": "1.6.0",
+    "expo-router": "1.7.6",
+    "@prisma/client": "5.22.0",
+    "bcrypt": "5.1.1",
+    "jsonwebtoken": "9.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.22.5"
+    "@babel/core": "7.20.0",
+    "@types/react": "18.2.0",
+    "prisma": "5.22.0",
+    "typescript": "5.1.0"
+  },
+  "prisma": {
+    "seed": "node prisma/seed.js"
   }
 }
